--- a/bundles/trustedauth/pom.xml
+++ b/bundles/trustedauth/pom.xml
@@ -114,6 +114,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.core</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
